new_tests/semantics/scope/bad/014_NE4.cm

def WEEKS type = {MON = 1}

def a:Int = WEEKS
